--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,25 @@
 body{
 	background: #fafafa;
 	font-size: 14px;
+	margin: 0;
+}
+
+.centralize{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.loading{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.loading label{
+	font-size: 24px;
 }
 
 .wrapper .header{
